[package]
name = "helium-load"
version = "0.1.0"
authors = ["chris <chris@chrisbruce.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
dotenv = "*"
glob = "0.3.0"
helium-api = { git = "https://github.com/helium/helium-api-rs" }
helium-wallet = { git = "https://github.com/helium/helium-wallet-rs.git" }